--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "target": "ES6",
+    "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ES6",
+    "module": "ESNext",
     "skipLibCheck": true,
 
     /* Bundler mode */
