feat: refactor get patch delete activity service

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,7 +23,8 @@
     "noUncheckedSideEffectImports": true,
 
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["vite/client"]
   },
   "include": ["src"]
 }
