--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "easy-peasy": "^6.1.0",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
     "react-bootstrap": "^2.10.5",
+    "react-cookie": "^8.0.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-i18next": "^15.3.0",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/date-fns": "^2.5.3",
+    "@types/globalize": "^1.5.5",
     "@types/react": "^18.3.12",
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^18.3.1",
