--- a/.hintrc
+++ b/.hintrc
@@ -12,6 +12,12 @@
     "typescript-config/consistent-casing": "off",
     "typescript-config/is-valid": "off",
     "typescript-config/strict": "off",
-    "button-type": "off"
+    "button-type": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
+    ]
   }
 }
