--- a/.hintrc
+++ b/.hintrc
@@ -1,13 +1,11 @@
 {
-  "extends": [
-    "development"
-  ],
+  "extends": ["development"],
   "hints": {
     "axe/forms": [
       "default",
       {
-        "select-name": "off"
-      }
+        "select-name": "off",
+      },
     ],
     "typescript-config/consistent-casing": "off",
     "typescript-config/is-valid": "off",
@@ -16,8 +14,8 @@
     "axe/name-role-value": [
       "default",
       {
-        "button-name": "off"
-      }
-    ]
-  }
+        "button-name": "off",
+      },
+    ],
+  },
 }
