--- a/package.json
+++ b/package.json
@@ -18,28 +18,22 @@
     "@mui/x-charts": "^8.5.2",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
     "easy-peasy": "^6.1.0",
+    "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.0.2",
-    "i18next-http-backend": "^3.0.1",
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.53.2",
     "react-i18next": "^15.3.0",
-    "react-router-dom": "^7.1.1",
-    "uuid": "^11.0.5"
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@types/date-fns": "^2.5.3",
-    "@types/globalize": "^1.5.5",
     "@types/react": "^18.3.12",
-    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
-    "date-fns": "^4.1.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
